--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "a.vim"]
 	path = vim/bundle/a.vim
 	url = git@github.com:vim-scripts/a.vim.git
+[submodule "nerdtree"]
+	path = vim/bundle/nerdtree
+	url = git@github.com:scrooloose/nerdtree.git
