--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "OmniCppComplete"]
 	path = vim/bundle/OmniCppComplete
 	url = git@github.com:vim-scripts/OmniCppComplete.git
+[submodule "jellybeans.vim"]
+	path = vim/bundle/jellybeans.vim
+	url = git@github.com:nanotech/jellybeans.vim.git
