--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 	path = vim/bundle/vim-markdown
 	url = git@github.com:tpope/vim-markdown.git
     ignore = untracked
+[submodule "vim-protobuf"]
+	path = vim/bundle/vim-protobuf
+	url = git@github.com:uarun/vim-protobuf.git
