--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vim-protobuf"]
 	path = vim/bundle/vim-protobuf
 	url = git@github.com:uarun/vim-protobuf.git
+[submodule "vim-colors-solarized"]
+	path = vim/bundle/vim-colors-solarized
+	url = git@github.com:altercation/vim-colors-solarized.git
