Installed auto-pairs

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim-airline"]
 	path = vim/bundle/vim-airline
 	url = git@github.com:bling/vim-airline.git
+[submodule "auto-pairs"]
+	path = vim/bundle/auto-pairs
+	url = git@github.com:zachwhaley/auto-pairs.git
