--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim-snippets"]
 	path = vim/bundle/vim-snippets
 	url = git@github.com:zachwhaley/vim-snippets.git
+[submodule "tlib_vim"]
+	path = vim/bundle/tlib_vim
+	url = https://github.com/tomtom/tlib_vim.git
