--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim-gitgutter"]
 	path = vim.symlink/bundle/vim-gitgutter
 	url = git@github.com:airblade/vim-gitgutter.git
+[submodule "ctrlp.vim"]
+	path = vim.symlink/bundle/ctrlp.vim
+	url = git@github.com:kien/ctrlp.vim.git
