--- a/.gitmodules
+++ b/.gitmodules
@@ -67,9 +67,9 @@
 [submodule "vim-fugitive"]
 	path = vim.symlink/bundle/vim-fugitive
 	url = git@github.com:tpope/vim-fugitive.git
-[submodule "vim-gitgutter"]
-	path = vim.symlink/bundle/vim-gitgutter
-	url = git@github.com:airblade/vim-gitgutter.git
 [submodule "ctrlp.vim"]
 	path = vim.symlink/bundle/ctrlp.vim
 	url = git@github.com:kien/ctrlp.vim.git
+[submodule "vim-signify"]
+	path = vim.symlink/bundle/vim-signify
+	url = git@github.com:mhinz/vim-signify.git
