--- a/terminator.config/config
+++ b/terminator.config/config
@@ -20,7 +20,7 @@
     copy_on_selection = True
     cursor_blink = False
     cursor_color = "#eee8d5"
-    font = Inconsolata Medium 14
+    font = Inconsolata 15
     foreground_color = "#eee8d5"
     palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     scrollback_infinite = True
