--- a/terminator.config/config
+++ b/terminator.config/config
@@ -16,7 +16,6 @@
 [profiles]
   [[default]]
     background_color = "#002b36"
-    background_image = None
     copy_on_selection = True
     cursor_blink = False
     cursor_color = "#eee8d5"
@@ -28,13 +27,17 @@
     use_system_font = False
   [[solarized-dark]]
     background_color = "#002b36"
-    background_image = None
     cursor_color = "#eee8d5"
     foreground_color = "#eee8d5"
     palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
   [[solarized-light]]
     background_color = "#eee8d5"
-    background_image = None
+    copy_on_selection = True
+    cursor_blink = False
     cursor_color = "#002b36"
+    font = Inconsolata 15
     foreground_color = "#002b36"
     palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+    scrollback_infinite = True
+    scrollbar_position = hidden
+    use_system_font = False
