--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "prezto"]
-	path = prezto
+[submodule "prezto/.zprezto"]
+	path = prezto/.zprezto
 	url = git@github.com:zachwhaley/prezto.git
-	branch = master
