--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,7 +7,7 @@
 	tool = vimdiff
 [mergetool]
 	prompt = true
-[mergetool]
+[mergetool "vimdiff"]
 	cmd = nvim -d $BASE $LOCAL $REMOTE $MERGED -c '$wincmd w' -c 'wincmd J'
 [push]
 	default = simple
