Change git log aliases

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -23,7 +23,8 @@
 	sh = show
 	di = diff
 	sd = diff --staged
-	lg = log --oneline --graph --format='format:%C(auto)%h %s%C(dim white) · %an%C(auto)%d%C(reset)'
+	lg = log --oneline --graph --format='format:%C(auto)%h%d %s%C(dim white) · %an · %C(green)%cr%C(reset)'
+	lgg = log --oneline --graph --date='format:%Y %b %d' --format='format:%C(auto)%h%d %s%C(dim white) · %an <%ae> · %C(green)%cd%C(reset)'
 	unstage = reset HEAD
 	last = log -1 HEAD
 	dif = diff
