--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "prezto/.zprezto"]
 	path = prezto/.zprezto
-	url = git@github.com:zachwhaley/prezto.git
+	url = https://github.com/zachwhaley/prezto.git
