Cleanup tmux conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,28 +1,31 @@
 # I use C-b and C-a to navigate the terminal
-unbind C-b
-set -g prefix C-s
-bind C-s send-prefix
+unbind-key C-b
+set-option -g prefix C-s
+bind-key C-s send-prefix
 
 # Set escape time to 0 to avoid the escape delay in nvim
-set -sg escape-time 0
+set-option -sg escape-time 0
 
 # start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-set -g pane-base-index 1
+set-option -g base-index 1
+set-option -g pane-base-index 1
 
-# Vim stuff
+# Vim mode
 set-window-option -g mode-keys vi
 # Allow cursor change in Neovim
-set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+set-option -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Kill tmux with one fell swoop
 bind-key K kill-server
+
+# Kill and reopen the current pane
+bind-key r respawn-pane -k
 
 # force a reload of the config file
 bind-key R source-file ~/.tmux.conf \; display-message "Reloaded"
 
 # increase history limit
-set -g history-limit 5000
+set-option -g history-limit 5000
 
 # pane cycling
 bind-key h select-pane -L
@@ -34,32 +37,32 @@ bind-key l select-pane -R
 bind-key ^s choose-tree
 
 # easy-to-remember split pane commands
-bind | split-window -h
-bind _ split-window -v
+bind-key | split-window -h
+bind-key _ split-window -v
 
 # improve colors
-set -g default-terminal screen-256color
+set-option -g default-terminal screen-256color
 
 # Panes
-set -g pane-border-style bg=black,fg=colour8
-set -g pane-active-border-style bg=black,fg=yellow
+set-option -g pane-border-style bg=black,fg=colour8
+set-option -g pane-active-border-style bg=black,fg=yellow
 
 # Statusbar
-set -g status-interval 2
-set -g status-position bottom
-set -g status-style bg=black,fg=colour10
-set -g status-right-length 50
-set -g status-right '#[bg=colour10,fg=white] #S #[fg=white,bold,bg=colour11] %H:%M:%S '
-set -g status-left-length 20
-set -g status-left '#[bg=cyan,fg=white] #H #[bg=default] '
+set-option -g status-interval 2
+set-option -g status-position bottom
+set-option -g status-style bg=black,fg=colour10
+set-option -g status-right-length 50
+set-option -g status-right '#[bg=colour10,fg=white] #S #[fg=white,bold,bg=colour11] %H:%M:%S '
+set-option -g status-left-length 20
+set-option -g status-left '#[bg=cyan,fg=white] #H #[bg=default] '
 
 # Window status
-setw -g window-status-format '#[bg=colour11,fg=colour15] #W #[reverse] #F '
-setw -g window-status-current-format '#[bg=yellow,fg=white,bold] #W #[reverse,nobold] #F '
+set-window-option -g window-status-format '#[bg=colour11,fg=colour15] #W #[reverse] #F '
+set-window-option -g window-status-current-format '#[bg=yellow,fg=white,bold] #W #[reverse,nobold] #F '
 
 # Messages
-set -g message-style bg=black,fg=colour12
-set -g message-command-style bg=black,fg=red
+set-option -g message-style bg=black,fg=colour12
+set-option -g message-command-style bg=black,fg=red
 
 # Modes
-setw -g mode-style bg=colour11,fg=white,bold
+set-window-option -g mode-style bg=colour11,fg=white,bold
