--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -24,9 +24,8 @@
 	sd = diff --staged
 	lg = log --oneline --graph --format='format:%C(auto)%h%d %s%C(dim white) · %an · %C(green)%cr%C(reset)'
 	lgg = log --oneline --graph --date='format:%Y %b %d' --format='format:%C(auto)%h%d %s%C(dim white) · %an <%ae> · %C(green)%cd%C(reset)'
-	unstage = reset HEAD
-	last = log -1 HEAD
 	dif = diff
+	pul = pull
 	sync = !git fetch upstream && git merge upstream/master
 	apply-gitignore = !git ls-files -ci --exclude-standard -z | xargs -0r git rm --cached
 [rebase]
