--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -19,18 +19,21 @@
 	st = status
 	ci = commit
 	cp = cherry-pick
-	sh = show
 	di = diff
 	sd = diff --staged
 	lg = log --oneline --graph --format='format:%C(auto)%h%d %s%C(dim white) · %an · %C(green)%cr%C(reset)'
 	lgg = log --oneline --graph --date='format:%Y %b %d' --format='format:%C(auto)%h%d %s%C(dim white) · %an <%ae> · %C(green)%cd%C(reset)'
 	dif = diff
+	sho = show
 	pul = pull
 	sync = !git fetch upstream && git merge upstream/master
 	apply-gitignore = !git ls-files -ci --exclude-standard -z | xargs -0r git rm --cached
 [rebase]
 	autosquash = true
-[pull]
-	rebase = true
 [blame]
 	date = relative
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
