--- a/terminator/.config/terminator/config
+++ b/terminator/.config/terminator/config
@@ -15,16 +15,17 @@
 [plugins]
 [profiles]
   [[default]]
-    background_color = "#002b36"
     copy_on_selection = True
     cursor_blink = False
-    cursor_color = "#eee8d5"
     font = Inconsolata 15
-    foreground_color = "#eee8d5"
-    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     scrollback_infinite = True
     scrollbar_position = hidden
     use_system_font = False
+    palette = "#161819:#f73028:#aab01e:#f7b125:#719586:#c77089:#7db669:#faefbb:#7f7061:#be0f17:#868715:#cc881a:#377375:#a04b73:#578e57:#e6d4a3"
+    background_color = "#1e1e1e"
+    cursor_color = "#bbbbbb"
+    foreground_color = "#e6d4a3"
+    background_image = None
   [[solarized-dark]]
     background_color = "#002b36"
     cursor_color = "#eee8d5"
@@ -41,3 +42,9 @@
     scrollback_infinite = True
     scrollbar_position = hidden
     use_system_font = False
+  [[gruvbox-dark]]
+    palette = "#161819:#f73028:#aab01e:#f7b125:#719586:#c77089:#7db669:#faefbb:#7f7061:#be0f17:#868715:#cc881a:#377375:#a04b73:#578e57:#e6d4a3"
+    background_color = "#1e1e1e"
+    cursor_color = "#bbbbbb"
+    foreground_color = "#e6d4a3"
+    background_image = None
