--- a/terminator/.config/terminator/config
+++ b/terminator/.config/terminator/config
@@ -15,17 +15,16 @@
 [plugins]
 [profiles]
   [[default]]
+    background_color = "#282828"
     copy_on_selection = True
     cursor_blink = False
+    cursor_color = "#aaaaaa"
     font = Inconsolata 15
+    foreground_color = "#ebdbb2"
+    palette = "#282828:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#a89984:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
     scrollback_infinite = True
     scrollbar_position = hidden
     use_system_font = False
-    palette = "#161819:#f73028:#aab01e:#f7b125:#719586:#c77089:#7db669:#faefbb:#7f7061:#be0f17:#868715:#cc881a:#377375:#a04b73:#578e57:#e6d4a3"
-    background_color = "#1e1e1e"
-    cursor_color = "#bbbbbb"
-    foreground_color = "#e6d4a3"
-    background_image = None
   [[solarized-dark]]
     background_color = "#002b36"
     cursor_color = "#eee8d5"
@@ -42,9 +41,3 @@
     scrollback_infinite = True
     scrollbar_position = hidden
     use_system_font = False
-  [[gruvbox-dark]]
-    palette = "#161819:#f73028:#aab01e:#f7b125:#719586:#c77089:#7db669:#faefbb:#7f7061:#be0f17:#868715:#cc881a:#377375:#a04b73:#578e57:#e6d4a3"
-    background_color = "#1e1e1e"
-    cursor_color = "#bbbbbb"
-    foreground_color = "#e6d4a3"
-    background_image = None
