Swap windows in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,6 +33,10 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# window swapping
+bind-key Left swap-window -t -1
+bind-key Right swap-window -t +1
+
 # quick session views
 bind-key ^s choose-tree
 
