Going to try a new tmux prefix binding

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # I use C-b and C-a to navigate the terminal
 unbind-key C-b
-set-option -g prefix C-s
-bind-key C-s send-prefix
+set-option -g prefix C-x
+bind-key C-x send-prefix
 
 # Set escape time to 0 to avoid the escape delay in nvim
 set-option -sg escape-time 0
