Add git pr alias
Uses hub pull-request

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -18,6 +18,7 @@
 	br = branch
 	st = status
 	ci = commit
+	pr = "!hub pull-request -a $(id -un) -b \"$1\" -o #"
 	cp = cherry-pick
 	di = diff
 	sd = diff --staged
