Do not open pull request after creating

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -24,7 +24,7 @@
 	lfs-fetch = "!git log --all --format=%H --diff-filter=A -n 1 -- \"$1\" | xargs -I% git checkout % && git checkout - #"
 	lg = log --oneline --graph --format='format:%C(auto)%h%d %s%C(dim white) · %an · %C(green)%cr%C(reset)'
 	lgg = log --oneline --graph --date='format:%Y %b %d' --format='format:%C(auto)%h%d %s%C(dim white) · %an <%ae> · %C(green)%cd%C(reset)'
-	pr = "!hub pull-request -a $(id -un) -b \"$1\" -o #"
+	pr = "!hub pull-request -a $(id -un) -b \"$1\" #"
 	pul = pull
 	sd = diff --staged
 	sho = show
