Fix tmux TERM for macos
I think...

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,7 +45,8 @@ bind-key | split-window -h
 bind-key _ split-window -v
 
 # improve colors
-set-option -g default-terminal "tmux-256color"
+#set-option -g default-terminal "tmux-256color"
+set-option -g default-terminal "xterm-256color"
 # enable true colors
 set-option -g -a terminal-overrides ",xterm-256color:Tc"
 
