--- a/neovim/.config/nvim/coc-settings.json
+++ b/neovim/.config/nvim/coc-settings.json
@@ -1,9 +1,8 @@
 {
   "languageserver": {
-    "go": {
+    "golang": {
       "command": "gopls",
       "rootPatterns": ["go.mod"],
-      "trace.server": "verbose",
       "filetypes": ["go"]
     },
     "terraform": {
