--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -9,6 +9,7 @@
 	cmd = nvim -d $BASE $LOCAL $REMOTE $MERGED -c '$wincmd w' -c 'wincmd J'
 [push]
 	default = simple
+	autoSetupRemote = true
 [core]
 	editor = nvim
 [alias]
@@ -22,6 +23,7 @@
 	re = restore
 	dif = diff
 	lfs-fetch = "!git log --all --format=%H --diff-filter=A -n 1 -- \"$1\" | xargs -I% git checkout % && git checkout - #"
+	l =  log --oneline --graph --format='format:%C(auto)%h %s%d'
 	lg = log --oneline --graph --format='format:%C(auto)%h%d %s%C(dim white) · %an · %C(green)%cr%C(reset)'
 	lgg = log --oneline --graph --date='format:%Y %b %d' --format='format:%C(auto)%h%d %s%C(dim white) · %an <%ae> · %C(green)%cd%C(reset)'
 	pul = pull
@@ -47,3 +49,5 @@
 	rebase = false
 [init]
 	defaultBranch = main
+[advice]
+	detachedHead = false
