--- a/bat/.config/bat/config
+++ b/bat/.config/bat/config
@@ -4,7 +4,7 @@
 
 # Specify desired highlighting theme (e.g. "TwoDark"). Run `bat --list-themes`
 # for a list of all available themes
---theme="Monokai Extended Origin"
+--theme="gruvbox-dark"
 
 --plain
 
