--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -26,8 +26,10 @@
 	l =  log --oneline --graph --format='format:%C(auto)%h %s%d'
 	lg = log --oneline --graph --format='format:%C(auto)%h%d %s%C(dim white) · %an · %C(green)%cr%C(reset)'
 	lgg = log --oneline --graph --date='format:%Y %b %d' --format='format:%C(auto)%h%d %s%C(dim white) · %an <%ae> · %C(green)%cd%C(reset)'
+	cl = log --oneline --graph --format
 	pul = pull
 	ds = diff --staged
+	dm = diff origin/main...
 	sh = show
 	st = status
 	trim = !git fetch --all --prune && git branch -vv | grep -v $(git symbolic-ref --short HEAD) | awk '/.*: gone]/ {print $1}' | xargs git branch -D -v
@@ -44,10 +46,12 @@
 	host = dsgithub.trendmicro.com
 [user]
 	name = Zachary Whaley
-	email = zachbwhaley@gmail.com
+	email = zachary_whaley@trendmicro.com
 [pull]
 	rebase = false
 [init]
 	defaultBranch = main
 [advice]
 	detachedHead = false
+[branch]
+	sort=-committerdate
